--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12298, 11) (12298, 2)\n"
+      "(12298, 17) (12298, 2)\n"
      ]
     }
    ],
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12298, 13)\n"
+      "(12298, 19)\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -125,6 +125,12 @@
        "      <th>PRED</th>\n",
        "      <th>FUNC</th>\n",
        "      <th>M_R</th>\n",
+       "      <th>CTX_P-3</th>\n",
+       "      <th>CTX_P-2</th>\n",
+       "      <th>CTX_P-1</th>\n",
+       "      <th>CTX_P+1</th>\n",
+       "      <th>CTX_P+2</th>\n",
+       "      <th>CTX_P+3</th>\n",
        "      <th>ARG_0</th>\n",
        "      <th>ARG_1</th>\n",
        "      <th>Y_0</th>\n",
@@ -145,6 +151,12 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -152,105 +164,135 @@
        "      <th>123846</th>\n",
        "      <td>1</td>\n",
        "      <td>2879</td>\n",
-       "      <td>5101</td>\n",
+       "      <td>5100</td>\n",
        "      <td>0</td>\n",
        "      <td>Entre</td>\n",
        "      <td>entre</td>\n",
        "      <td>estar</td>\n",
        "      <td>-</td>\n",
        "      <td>0</td>\n",
+       "      <td>entre</td>\n",
+       "      <td>o</td>\n",
+       "      <td>convidado</td>\n",
+       "      <td>o</td>\n",
+       "      <td>-</td>\n",
+       "      <td>rei</td>\n",
        "      <td>(A2*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(A0*)</td>\n",
-       "      <td>A0</td>\n",
+       "      <td>(A1*)</td>\n",
+       "      <td>A1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123847</th>\n",
        "      <td>2</td>\n",
        "      <td>2879</td>\n",
-       "      <td>5101</td>\n",
+       "      <td>5100</td>\n",
        "      <td>0</td>\n",
        "      <td>os</td>\n",
        "      <td>o</td>\n",
        "      <td>estar</td>\n",
        "      <td>-</td>\n",
        "      <td>0</td>\n",
+       "      <td>entre</td>\n",
+       "      <td>o</td>\n",
+       "      <td>convidado</td>\n",
+       "      <td>o</td>\n",
+       "      <td>-</td>\n",
+       "      <td>rei</td>\n",
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(A0*)</td>\n",
-       "      <td>A0</td>\n",
+       "      <td>(A1*</td>\n",
+       "      <td>A1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
        "      <td>3</td>\n",
        "      <td>2879</td>\n",
-       "      <td>5101</td>\n",
+       "      <td>5100</td>\n",
        "      <td>0</td>\n",
        "      <td>convidados</td>\n",
        "      <td>convidado</td>\n",
        "      <td>estar</td>\n",
        "      <td>-</td>\n",
        "      <td>0</td>\n",
+       "      <td>entre</td>\n",
+       "      <td>o</td>\n",
+       "      <td>convidado</td>\n",
+       "      <td>o</td>\n",
+       "      <td>-</td>\n",
+       "      <td>rei</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(A0*)</td>\n",
-       "      <td>A0</td>\n",
+       "      <td>(A1*)</td>\n",
+       "      <td>A1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
        "      <td>4</td>\n",
        "      <td>2879</td>\n",
-       "      <td>5101</td>\n",
+       "      <td>5100</td>\n",
        "      <td>0</td>\n",
        "      <td>estão</td>\n",
        "      <td>estar</td>\n",
        "      <td>estar</td>\n",
        "      <td>estar</td>\n",
        "      <td>1</td>\n",
+       "      <td>entre</td>\n",
+       "      <td>o</td>\n",
+       "      <td>convidado</td>\n",
+       "      <td>o</td>\n",
+       "      <td>-</td>\n",
+       "      <td>rei</td>\n",
        "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
-       "      <td>(A0*)</td>\n",
-       "      <td>A0</td>\n",
+       "      <td>(C-A0*</td>\n",
+       "      <td>C-A0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123850</th>\n",
        "      <td>5</td>\n",
        "      <td>2879</td>\n",
-       "      <td>5101</td>\n",
+       "      <td>5100</td>\n",
        "      <td>0</td>\n",
        "      <td>o</td>\n",
        "      <td>o</td>\n",
        "      <td>estar</td>\n",
        "      <td>-</td>\n",
        "      <td>1</td>\n",
+       "      <td>entre</td>\n",
+       "      <td>o</td>\n",
+       "      <td>convidado</td>\n",
+       "      <td>o</td>\n",
+       "      <td>-</td>\n",
+       "      <td>rei</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>(A0*)</td>\n",
-       "      <td>A0</td>\n",
+       "      <td>(A1*</td>\n",
+       "      <td>A1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        ID     S     P  P_S        FORM      LEMMA   PRED   FUNC  M_R ARG_0  \\\n",
-       "IDX                                                                           \n",
-       "123846   1  2879  5101    0       Entre      entre  estar      -    0  (A2*   \n",
-       "123847   2  2879  5101    0          os          o  estar      -    0     *   \n",
-       "123848   3  2879  5101    0  convidados  convidado  estar      -    0    *)   \n",
-       "123849   4  2879  5101    0       estão      estar  estar  estar    1  (V*)   \n",
-       "123850   5  2879  5101    0           o          o  estar      -    1  (A1*   \n",
+       "        ID     S     P  P_S        FORM      LEMMA   PRED   FUNC  M_R CTX_P-3  \\\n",
+       "IDX                                                                             \n",
+       "123846   1  2879  5100    0       Entre      entre  estar      -    0   entre   \n",
+       "123847   2  2879  5100    0          os          o  estar      -    0   entre   \n",
+       "123848   3  2879  5100    0  convidados  convidado  estar      -    0   entre   \n",
+       "123849   4  2879  5100    0       estão      estar  estar  estar    1   entre   \n",
+       "123850   5  2879  5100    0           o          o  estar      -    1   entre   \n",
        "\n",
-       "       ARG_1    Y_0 Y_1  \n",
-       "IDX                      \n",
-       "123846    A2  (A0*)  A0  \n",
-       "123847    A2  (A0*)  A0  \n",
-       "123848    A2  (A0*)  A0  \n",
-       "123849     V  (A0*)  A0  \n",
-       "123850    A1  (A0*)  A0  "
+       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1     Y_0   Y_1  \n",
+       "IDX                                                                          \n",
+       "123846       o  convidado       o       -     rei  (A2*    A2   (A1*)    A1  \n",
+       "123847       o  convidado       o       -     rei     *    A2    (A1*    A1  \n",
+       "123848       o  convidado       o       -     rei    *)    A2   (A1*)    A1  \n",
+       "123849       o  convidado       o       -     rei  (V*)     V  (C-A0*  C-A0  \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1    (A1*    A1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -328,14 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/guilhermevarela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -377,7 +419,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A0*)</td>\n",
+       "      <td>(A1*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -387,7 +429,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A0*)</td>\n",
+       "      <td>(A1*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -397,7 +439,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A0*)</td>\n",
+       "      <td>(A1*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -407,7 +449,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>estar</td>\n",
-       "      <td>(A0*)</td>\n",
+       "      <td>(C-A0*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -417,7 +459,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A0*)</td>\n",
+       "      <td>(A1*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -429,15 +471,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    FUNC   ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -  (A0*)                         \n",
-       "1      -  (A0*)                         \n",
-       "2      -  (A0*)                         \n",
-       "3  estar  (A0*)                         \n",
-       "4      -  (A0*)                         "
+       "    FUNC    ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -   (A1*)                         \n",
+       "1      -    (A1*                         \n",
+       "2      -   (A1*)                         \n",
+       "3  estar  (C-A0*                         \n",
+       "4      -    (A1*                         "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,14 +500,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/guilhermevarela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "/Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -567,7 +609,7 @@
        "4      -  (A1*                         "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,9 +632,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (tensorflow)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
