--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +179,8 @@
        "      <td>rei</td>\n",
        "      <td>(A2*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A2*</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123847</th>\n",
@@ -202,7 +202,7 @@
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
        "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
@@ -223,8 +223,8 @@
        "      <td>rei</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>*)</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
@@ -245,8 +245,8 @@
        "      <td>rei</td>\n",
        "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(V*)</td>\n",
+       "      <td>V</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123850</th>\n",
@@ -267,8 +267,8 @@
        "      <td>rei</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A2*)</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -283,16 +283,16 @@
        "123849   4  2879  5100    0       estão      estar  estar  estar    1   entre   \n",
        "123850   5  2879  5100    0           o          o  estar      -    1   entre   \n",
        "\n",
-       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1 Y_0 Y_1  \n",
-       "IDX                                                                    \n",
-       "123846       o  convidado       o       -     rei  (A2*    A2   *   *  \n",
-       "123847       o  convidado       o       -     rei     *    A2   *   *  \n",
-       "123848       o  convidado       o       -     rei    *)    A2   *   *  \n",
-       "123849       o  convidado       o       -     rei  (V*)     V   *   *  \n",
-       "123850       o  convidado       o       -     rei  (A1*    A1   *   *  "
+       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1    Y_0 Y_1  \n",
+       "IDX                                                                       \n",
+       "123846       o  convidado       o       -     rei  (A2*    A2   (A2*  A2  \n",
+       "123847       o  convidado       o       -     rei     *    A2      *  A2  \n",
+       "123848       o  convidado       o       -     rei    *)    A2     *)  A2  \n",
+       "123849       o  convidado       o       -     rei  (V*)     V   (V*)   V  \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1  (A2*)  A2  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A2*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -439,7 +439,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -449,7 +449,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>estar</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(V*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -459,7 +459,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>(A2*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -471,15 +471,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    FUNC ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -    *                         \n",
-       "1      -    *                         \n",
-       "2      -    *                         \n",
-       "3  estar    *                         \n",
-       "4      -    *                         "
+       "    FUNC   ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -   (A2*                         \n",
+       "1      -      *                         \n",
+       "2      -     *)                         \n",
+       "3  estar   (V*)                         \n",
+       "4      -  (A2*)                         "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
