--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "text": [
       "../datasets/csvs/zhou_valid.csv\n",
-      "../outputs/bilstm_crf/lr5.00e-04_hs512x128x64_ctx-p3/00/Yhat_valid.csv\n"
+      "../outputs/bilstm_crf/lr5.00e-04_hs512x64_ctx-p1/01/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -37,8 +37,8 @@
     "\n",
     "\n",
     "MODEL_NAME='bilstm_crf'\n",
-    "HPARAMS_STR='lr5.00e-04_hs512x128x64_ctx-p3'\n",
-    "MODEL_V= '00'\n",
+    "HPARAMS_STR='lr5.00e-04_hs512x64_ctx-p1'\n",
+    "MODEL_V= '01'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +179,8 @@
        "      <td>rei</td>\n",
        "      <td>(A2*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(AM-ADV*)</td>\n",
-       "      <td>AM-ADV</td>\n",
+       "      <td>(A2*</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123847</th>\n",
@@ -201,8 +201,8 @@
        "      <td>rei</td>\n",
        "      <td>*</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(A1*)</td>\n",
-       "      <td>A1</td>\n",
+       "      <td>*</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123848</th>\n",
@@ -223,8 +223,8 @@
        "      <td>rei</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>(V*</td>\n",
-       "      <td>V</td>\n",
+       "      <td>*)</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123849</th>\n",
@@ -245,7 +245,7 @@
        "      <td>rei</td>\n",
        "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
-       "      <td>*)</td>\n",
+       "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -283,24 +283,16 @@
        "123849   4  2879  5100    0       estão      estar  estar  estar    1   entre   \n",
        "123850   5  2879  5100    0           o          o  estar      -    1   entre   \n",
        "\n",
-       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1        Y_0  \\\n",
-       "IDX                                                                        \n",
-       "123846       o  convidado       o       -     rei  (A2*    A2  (AM-ADV*)   \n",
-       "123847       o  convidado       o       -     rei     *    A2      (A1*)   \n",
-       "123848       o  convidado       o       -     rei    *)    A2        (V*   \n",
-       "123849       o  convidado       o       -     rei  (V*)     V         *)   \n",
-       "123850       o  convidado       o       -     rei  (A1*    A1       (A1*   \n",
-       "\n",
-       "           Y_1  \n",
-       "IDX             \n",
-       "123846  AM-ADV  \n",
-       "123847      A1  \n",
-       "123848       V  \n",
-       "123849       V  \n",
-       "123850      A1  "
+       "       CTX_P-2    CTX_P-1 CTX_P+1 CTX_P+2 CTX_P+3 ARG_0 ARG_1   Y_0 Y_1  \n",
+       "IDX                                                                      \n",
+       "123846       o  convidado       o       -     rei  (A2*    A2  (A2*  A2  \n",
+       "123847       o  convidado       o       -     rei     *    A2     *  A2  \n",
+       "123848       o  convidado       o       -     rei    *)    A2    *)  A2  \n",
+       "123849       o  convidado       o       -     rei  (V*)     V  (V*)   V  \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1  (A1*  A1  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -378,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +419,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-</td>\n",
-       "      <td>(AM-ADV*)</td>\n",
+       "      <td>(A2*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -437,7 +429,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A1*)</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -447,7 +439,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>(V*</td>\n",
+       "      <td>*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -457,7 +449,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>estar</td>\n",
-       "      <td>*)</td>\n",
+       "      <td>(V*)</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -479,15 +471,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    FUNC       ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
-       "0      -  (AM-ADV*)                         \n",
-       "1      -      (A1*)                         \n",
-       "2      -        (V*                         \n",
-       "3  estar         *)                         \n",
-       "4      -       (A1*                         "
+       "    FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
+       "0      -  (A2*                         \n",
+       "1      -     *                         \n",
+       "2      -    *)                         \n",
+       "3  estar  (V*)                         \n",
+       "4      -  (A1*                         "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
