--- a/notebooks/evaluations-make_conll.ipynb
+++ b/notebooks/evaluations-make_conll.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "text": [
       "../datasets/csvs/zhou_valid.csv\n",
-      "../outputs/bilstm_crf/lr5.00e-04_hs512x64_ctx-p1/01/Yhat_valid.csv\n"
+      "../outputs/bilstm_crf/lr1.00e-05_hs512x64_ctx-p1_wang2vec_s100/00/Yhat_valid.csv\n"
      ]
     }
    ],
@@ -37,8 +37,8 @@
     "\n",
     "\n",
     "MODEL_NAME='bilstm_crf'\n",
-    "HPARAMS_STR='lr5.00e-04_hs512x64_ctx-p1'\n",
-    "MODEL_V= '01'\n",
+    "HPARAMS_STR='lr1.00e-05_hs512x64_ctx-p1_wang2vec_s100'\n",
+    "MODEL_V= '00'\n",
     "INPUT_DIR= '../datasets/csvs/'\n",
     "OUTPUT_DIR='../outputs/'\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "      <td>rei</td>\n",
        "      <td>*)</td>\n",
        "      <td>A2</td>\n",
-       "      <td>*)</td>\n",
+       "      <td>*</td>\n",
        "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -245,8 +245,8 @@
        "      <td>rei</td>\n",
        "      <td>(V*)</td>\n",
        "      <td>V</td>\n",
-       "      <td>(V*)</td>\n",
-       "      <td>V</td>\n",
+       "      <td>*</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123850</th>\n",
@@ -267,8 +267,8 @@
        "      <td>rei</td>\n",
        "      <td>(A1*</td>\n",
        "      <td>A1</td>\n",
-       "      <td>(A1*</td>\n",
-       "      <td>A1</td>\n",
+       "      <td>*</td>\n",
+       "      <td>A2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -287,12 +287,12 @@
        "IDX                                                                      \n",
        "123846       o  convidado       o       -     rei  (A2*    A2  (A2*  A2  \n",
        "123847       o  convidado       o       -     rei     *    A2     *  A2  \n",
-       "123848       o  convidado       o       -     rei    *)    A2    *)  A2  \n",
-       "123849       o  convidado       o       -     rei  (V*)     V  (V*)   V  \n",
-       "123850       o  convidado       o       -     rei  (A1*    A1  (A1*  A1  "
+       "123848       o  convidado       o       -     rei    *)    A2     *  A2  \n",
+       "123849       o  convidado       o       -     rei  (V*)     V     *  A2  \n",
+       "123850       o  convidado       o       -     rei  (A1*    A1     *  A2  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-</td>\n",
-       "      <td>*)</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -449,7 +449,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>estar</td>\n",
-       "      <td>(V*)</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -459,7 +459,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-</td>\n",
-       "      <td>(A1*</td>\n",
+       "      <td>*</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -474,12 +474,12 @@
        "    FUNC  ARG0 ARG1 ARG2 ARG3 ARG4 ARG5\n",
        "0      -  (A2*                         \n",
        "1      -     *                         \n",
-       "2      -    *)                         \n",
-       "3  estar  (V*)                         \n",
-       "4      -  (A1*                         "
+       "2      -     *                         \n",
+       "3  estar     *                         \n",
+       "4      -     *                         "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
